force-app/main/default/objects/Account_Relations_For_Lead_Conv__mdt/Account_Relations_For_Lead_Conv__mdt.object-meta.xml
<CustomObject>
    <description>Metadata for storing the account relations which are to be used to link the accounts with the converted lead.</description>
    <label>Account Relations For Lead Conv</label>
    <pluralLabel>Account Relations For Lead Conv</pluralLabel>
</CustomObject>