force-app/main/default/objects/Account_Relations_For_Lead_Conv__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate the default relationship value</description>
    <label>Is Default?</label>
    <type>Checkbox</type>
</CustomField>