force-app/main/default/objects/Account_Relations_For_Lead_Conv__mdt/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>The name of the relationship</description>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>