force-app/main/default/objects/Account_Relations_For_Lead_Conv__mdt/listViews/Account_Relation_Details.listView-meta.xml
<ListView>
    <fullName>Account_Relation_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Lead_Type__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Relationship_Name__c</columns>
    <columns>Is_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>Account Relation Details</label>
    <language>en_US</language>
</ListView>